--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <script src="https://cdn.jsdelivr.net/gh/kitao/pyxel/wasm/pyxel.js"></script>
 <pyxel-run name="mygame.py"></pyxel-run>
+
+# cd <C:\Users\user\Desktop\課題研究>
+cd test
